--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,8 +9,8 @@
 <body>    
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="about.html"target="_blank">About</a>
+        <a href="contact.html"target="_blank">Contact</a>
 
     </nav>
     <header>
