--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <h2>The Team</h2>
                 <div class="group-member">
                     <a href="lalaine.html">
-                    <img src="purplellama.jfif">
+                    <img src="oh/me.jpg">
                 </a>
                 <h3>Lalaine Rada</h3>
                     <p>Girlie 1</p>
