--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="hobi" id="kobi">
         <section class="hubi" id="know" style="display: none;">
             <article id="ho">
-                <img src="oh/1.jpg" width="100" height="100">
+                <img src="1.jpg" width="100" height="100">
                 <p>Reading</p>
             </article>
             <details id="he">
@@ -59,7 +59,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/2.jpg" width="100" height="100">
+                <img src="2.jpg" width="100" height="100">
                 <p>Cooking</p>
             </article>
             <details id="he">
@@ -68,7 +68,7 @@
             </details>
             
             <article id="ho">
-                <img src="oh/3.jpg" width="100" height="100">
+                <img src="3.jpg" width="100" height="100">
                 <p>Learning a new language</p>
             </article>
             <details id="he">
@@ -77,7 +77,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/15.jpg" width="100" height="100">
+                <img src="15.jpg" width="100" height="100">
                 <p>Listening to a podcast</p>
             </article>
             <details id="he">
@@ -87,7 +87,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/4.jpg" width="100" height="100">
+                <img src="4.jpg" width="100" height="100">
                 <p>Creating a game</p>
             </article>
             <details id="he">
@@ -99,7 +99,7 @@
 
         <section class="hubi"id="body" style="display: none;">
             <article id="ho">
-                <img src="oh/6.jpg" width="100" height="100">
+                <img src="6.jpg" width="100" height="100">
                 <p>Cycling</p>
             </article>
             <details id="he">
@@ -108,7 +108,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/7.jpg" width="100" height="100">
+                <img src="7.jpg" width="100" height="100">
                 <p>Dancing</p>
             </article>
             <details id="he">
@@ -117,7 +117,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/8.jpg" width="100" height="100">
+                <img src="8.jpg" width="100" height="100">
                 <p>Swimming</p>
             </article>
             <details id="he">
@@ -127,7 +127,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/9.jpg" width="100" height="100">
+                <img src="9.jpg" width="100" height="100">
                 <p>Walking</p>
             </article>
             <details id="he">
@@ -137,7 +137,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/5.jpg" width="100" height="100">
+                <img src="5.jpg" width="100" height="100">
                 <p>Martial Arts</p>
             </article>
             <details id="he">
@@ -147,7 +147,7 @@
         </section>
         <section class="hubi"id="mone" style="display: none;">
             <article id="ho">
-                <img src="oh/11.jpg" width="100" height="100">
+                <img src="11.jpg" width="100" height="100">
                 <p>Knitting</p>
             </article>
             <details id="he">
@@ -156,7 +156,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/12.jpg" width="100" height="100">
+                <img src="12.jpg" width="100" height="100">
                 <p>Vlogging</p>
             </article>
             <details id="he">
@@ -165,7 +165,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/13.jpg" width="100" height="100">
+                <img src="13.jpg" width="100" height="100">
                 <p>Animation</p>
             </article>
             <details id="he">
@@ -174,7 +174,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/14.jpg" width="100" height="100">
+                <img src="14.jpg" width="100" height="100">
                 <p>Tutoring</p>
             </article>
             <details id="he">
@@ -183,7 +183,7 @@
             </details>
 
             <article id="ho">
-                <img src="oh/10.jpg" width="100" height="100">
+                <img src="10.jpg" width="100" height="100">
                 <p>Writing novels</p>
             </article>
             <details id="he">
@@ -227,7 +227,7 @@
 <br>
 <br>
 <div class="imagemap">
-    <img src="oh/here.jpg" alt="youtube videos links" usemap="#mapy">
+    <img src="here.jpg" alt="youtube videos links" usemap="#mapy">
 
     <map name="mapy"> 
         <area target="_blank" href="https://youtu.be/UVmNzNf2FYM?si=O1tnX_oDdrueTWvq" coords="146,510,462,333" shape="rect">
@@ -241,12 +241,3 @@
     </footer>
 </body>
 </html>
-
-
-header
-nav
-main
-section
-article
-aside
-footer
