--- a/about.html
+++ b/about.html
@@ -31,14 +31,14 @@
                 <h2>The Team</h2>
                 <div class="group-member">
                     <a href="lalaine.html">
-                    <img src="oh/me.jpg">
+                    <img src="me.jpg">
                 </a>
                 <h3>Lalaine Rada</h3>
                     <p>Girlie 1</p>
                 </div>
                 <div class="group-member">
                     <a href="abegail.html">
-                    <img src="oh/profile.jpg">
+                    <img src="profile.jpg">
                     </a>
                     <h3>Abegail Hope M. Oyao</h3>
                     <p>Girlie 2</p>
