--- a/lalaine.html
+++ b/lalaine.html
@@ -20,9 +20,8 @@
             </div>
             <div class="column">
                 <img src="" alt="">
-                <h2>What kind of hobbies</h2>
-                <p>fhjklioeewi7 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>     
+                <h2>What kind of hobbies I love</h2>
+                <p>Games, Gym, and Crochetting</p>     
             </div>
         </div>
     </div>
