--- a/lalaine.html
+++ b/lalaine.html
@@ -21,7 +21,7 @@
             <div class="column">
                 <img src="" alt="">
                 <h2>What kind of hobbies I love</h2>
-                <p>Games, Gym, and Crochetting</p>     
+                <p>Games, Gym, and Crochetting.</p>     
             </div>
         </div>
     </div>
